lustre/llite/llite_internal.h
@@ -531,6 +531,9 @@ struct ll_sb_info {
 	/* root squash */
 	struct root_squash_info	  ll_squash;
 	struct path		  ll_mnt;
+
+	/* st_blksize returned by stat(2), when non-zero */
+	unsigned int		  ll_stat_blksize;
 };
 
 /*
